// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager.ui.components.routed_link render should not render onClick when not provided 1`] = `
<ForwardRef
  href="href"
>
  Content
</ForwardRef>
`;

exports[`manager.ui.components.routed_link render should render other properties 1`] = `
<ForwardRef
  href="href"
>
  Other content
</ForwardRef>
`;

exports[`manager.ui.components.routed_link render should render with onClick when provided 1`] = `
<ForwardRef
  href="#"
  onClick={[Function]}
>
  Content
</ForwardRef>
`;
